--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
         <h3 class="text-2xl font-bold mb-4">Ainda tem dúvidas?</h3>
         <p class="text-lg mb-6 opacity-90">Nossa equipe de suporte está pronta para ajudar você!</p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
-          <a href="#" class="bg-white text-indigo-600 px-6 py-3 rounded-xl font-bold hover:bg-gray-100 transition-colors duration-200 flex items-center justify-center gap-2">
+          <a href="https://wa.me/5585920023092" class="bg-white text-indigo-600 px-6 py-3 rounded-xl font-bold hover:bg-gray-100 transition-colors duration-200 flex items-center justify-center gap-2">
             <span>💬</span>
             WhatsApp Suporte
           </a>
