--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
       z-index: 1;
     }
   </style>
+  <!-- Facebook Pixel Code -->
+  <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1619101142248179');
+    fbq('track', 'PageView');
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1619101142248179&ev=PageView&noscript=1"/>
+  </noscript>
+  <!-- End Facebook Pixel Code -->
 </head>
 <body class="bg-gray-50 text-gray-900">
 
@@ -1014,9 +1032,8 @@
           </div>
         </div>
         <div class="flex gap-6">
-          <a href="#" class="hover:text-indigo-400 transition-colors duration-200 font-medium">Termos de Uso</a>
-          <a href="#" class="hover:text-indigo-400 transition-colors duration-200 font-medium">Política de Privacidade</a>
-          <a href="#" class="hover:text-indigo-400 transition-colors duration-200 font-medium">Suporte</a>
+          <a href="termos.html" class="hover:text-indigo-400 transition-colors duration-200 font-medium">Termos de Uso</a>
+          <a href="privacidade.html" class="hover:text-indigo-400 transition-colors duration-200 font-medium">Política de Privacidade</a>
         </div>
       </div>
       <div class="border-t border-gray-800 pt-6">
